# best-of-n-sampling

./: LICENSE  README.md  pyproject.toml
best_of_n/: __init__.py  best_of_n_sampling.py  generate_best_of_n.py  rank_by_value.py  reranking.py  util.py
tests/: mock_model.py  test_mock_best_of_n.py  test_mock_value_rank.py  test_real_model.py
